syntax = "proto3";

package adeploy;

// Deploy service definition
service DeployService {
    rpc Deploy(DeployRequest) returns (DeployResponse);
}

// Deploy request message
message DeployRequest {
    string package_name = 1;
    string version = 2;
    bytes file_data = 3;
    string ssh_signature = 4;
    string client_public_key = 5;
    map<string, string> metadata = 6;
}

// Deploy response message
message DeployResponse {
    bool success = 1;
    string message = 2;
    string deploy_id = 3;
    repeated string logs = 4;
}